--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar>
   <div class="home">
-    <mat-icon [routerLink]="['/']" class="pointer" fontIcon="home"></mat-icon>
+    <mat-icon [routerLink]="[Path.Home]" class="pointer" fontIcon="home"></mat-icon>
     <span> My Angular Demo </span>
   </div>
   <div class="nav">
